I say forget about capabilities, what'd they ever done for us?

--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -50,7 +50,7 @@ A platform is defined by a **platform integration module**, which is a VT6 modul
 
 For each official module (see section 3.3) that references **platform-specific behavior**, the specification for each platform integration module MUST define said behavior for its platform, or it MUST define that the module referencing platform-specific behavior is not supported on its platform.
 
-A platform integration module MAY define message types, properties and capabilities (see section 3) which are only available on the platform defined by it.
+A platform integration module MAY define message types and properties (see section 3) which are only available on the platform defined by it.
 
 *The remainder of this section is non-normative.*
 
@@ -220,18 +220,17 @@ If, while parsing a message stream, a message in the stream exceeds the recipien
 The VT6 protocol specification is divided into **modules**, each of which MUST have a **name** which is accepted by `<module-name>` (see section 2.2).
 For example, this document specifies the `core` module.
 
-Each module contains the message types, properties and capabilities defined in its specification (see below).
+Each module contains the message types and properties defined in its specification (see below).
 Each message type MUST have a **name** which is accepted by `<message-type>` (see section 2.2).
-Each property or capability MUST have a **name** which is accepted by `<scoped-name>` (see section 2.2).
+Each property MUST have a **name** which is accepted by `<scoped-name>` (see section 2.2).
 
-For each message type, property and capability (except for the `want`, `have` and `nope` message types defined in sections 4 and 5), the part of its name before the dot MUST be equivalent to the name of the module whose specification defines it.
+For each message type and property (except for the `want`, `have` and `nope` message types defined in sections 4 and 5), the part of its name before the dot MUST be equivalent to the name of the module whose specification defines it.
 For example, a module with a name of `example2` may define a message type named `example.foo` and a property named `example.bar`, but not a message type named `sample.foo` or a property named `sample.bar`.
 
 Each **message type** is defined by its name and a set of criteria describing when a message whose first element is the message type's name is to be considered valid by the recipient.
 These criteria include at least:
 
 - the directionality (whether the message may be sent from a client to a server, or vice-versa, or both),
-- the capabilities that the server must agree to (see section 4) before messages of this type may be sent, if any,
 - the number of arguments that a message of this type may contain,
 - the format and/or structure of said arguments,
 - the behavior that is expected of the recipient party upon having received the message.
@@ -244,16 +243,12 @@ It may also influence how the client reacts to a message from the server if (and
 Each property is defined by its name and at least the following criteria:
 
 - the set of values that the property can have,
-- the capabilities that the server must agree to before the client may subscribe to this property (see section 4),
 - whether, and under which circumstances, the client may set the property's value (see section 6.3),
 - how the behavior of client and server is influenced by the value of this property.
 
-A **capability** is an aspect of the module specification that may not be supported by every server.
-The server therefore has to agree to a capability (see section 4) before client and server can use the message types, properties or other behaviors restricted to this capability, even if the usage of the module which contains them has already been agreed to by the server.
+For each message type in a module, that module SHALL NOT contain a property of the same name.
 
-For each object (message type, property or capability) in a module, that module SHALL NOT contain a different object of the same name.
-
-*Rationale:* Even though technically possible, it would cause unnecessary confusion if, for example, there were a message type with the same name as a property.
+*Rationale:* Even though technically possible, it would cause unnecessary confusion.
 
 ### 3.1. Module versions
 
@@ -292,15 +287,15 @@ Each module specification whose minor version number is bigger than 0 SHOULD ind
 
 The following changes to a module specification are considered **backwards-compatible**:
 
-- definition of a new message type, property or capability
-- deprecation (but not removal) of an existing message type, property or capability
-- definition of previously undefined or underdefined behavior of an existing message type, property or capability
+- definition of a new message type or property
+- deprecation (but not removal) of an existing message type or property
+- definition of previously undefined or underdefined behavior of an existing message type or property
 - copyediting
 
 Every other change to a module specification is considered **backwards-incompatible**, especially:
 
-- removal of a message type, property or capability
-- change of behavior of an existing message type, property or capability in such a way that there may exist programs that conform to the previous version of the specification, but not to the current one
+- removal of a message type or property
+- change of behavior of an existing message type or property in such a way that there may exist programs that conform to the previous minor version of the specification, but not to the current one
 
 As an additional rule, all versions of the `core` module MUST be backwards-compatible with the parts of this specification that relate to all client and server behavior that takes place before a concrete version of the `core` module has been agreed to by the server.
 This includes, specifically:
@@ -344,35 +339,25 @@ The recommended way to do so is by including the following sentence near the sta
 
 ## 4. Protocol negotiation
 
-Before a client can use the message types, properties and capabilities of a module, usage of the module must have been agreed to by the server.
-Moreover, if some message types, properties and behaviors of a module are restricted to servers supporting a specific capability, the client can only use those message types, properties and behaviors after the server has agreed to using the capability.
-A server **agrees to** using a module or capability by answering a `want` message from the client that mentions this module or capability with a `have` message that mentions this module or capability.
+Before a client can use the message types and properties of a module, usage of the module must have been agreed to by the server.
+A server **agrees to** using a module by answering a `want` message from the client with a `have` message.
 
 ### 4.1. The `want` message
 
 - Directionality: client to server
-- Required capabilities: none
-- Number of arguments: two or more for module request, exactly one for capability request
+- Number of arguments: two or more
 
 Each argument MUST be a bareword.
 Quoted strings are not allowed in this message.
 
 *Rationale:* The syntax of the `want` message is deliberately minimized because of the compatibility requirements in section 3.2.
 
-A client can send a `want` message to request usage of a module or capability to the server.
-
-When requesting a module, the first argument MUST be the module name, and the remaining arguments SHALL be the major versions of that module that the client supports.
+A client can send a `want` message to the server to request usage of a module.
+The first argument MUST be the module name, and the remaining arguments SHALL be the major versions of that module that the client supports.
 For example, the following `want` message indicates that the client wants to use either major version 1 or major version 2 of the `example` module.
 
 ```vt6
 (want example 1 2)
-```
-
-When requesting a capability, the sole argument MUST be the capability name as accepted by `<scoped-name>`.
-For example, the following `want` message indicates that the client wants to use the `example.foo` capability.
-
-```vt6
-(want example.foo)
 ```
 
 The first message that a client sends on each server connection MUST be a `want` message requesting the `core` module.
@@ -382,21 +367,18 @@ The first message that a client sends on each server connection MUST be a `want`
 ### 4.2. The `have` message
 
 - Directionality: server to client
-- Required capabilities: none
-- Number of arguments: zero, one or two
+- Number of arguments: zero or two
 
 Each argument MUST be a bareword.
 Quoted strings are not allowed in this message.
 
 *Rationale:* Same as in section 4.1.
 
-Upon receiving a valid `want` message, the server MUST reply with a `have` message to indicate if it agrees to using the requested module or capability.
-If the `want` message is valid, but the server does not agree to the requested module or capability, it MUST reply with a `have` message with zero arguments.
+Upon receiving a valid `want` message, the server MUST reply with a `have` message to indicate if it agrees to using the requested module.
+If the `want` message is valid, but the server does not agree to the requested module, it MUST reply with a `have` message with zero arguments.
 
-#### 4.2.1. Answering requests for modules
-
-If the `want` message requests usage of a module and the server agrees to using that module, it MUST reply with a `have` message with two arguments: the module name and the full version of the specification supported by the server.
-Receipt of this `have` message entitles the client to use all message types, properties and behavior defined in a specification of that module with the same major version number and the same, or a smaller, minor version number, except for functionality dependent on capabilities.
+If the server agrees to using the requested module, it MUST reply with a `have` message with two arguments: the module name and the full version of the specification supported by the server.
+Receipt of this `have` message entitles the client to use all message types, properties and behavior defined in a specification of that module with the same major version number and the same, or a smaller, minor version number.
 The full version MUST be formatted according to the `<full-version>` grammar element defined above.
 The major version contained therein MUST be one of the major versions that appeared in the original `want` message.
 
@@ -407,18 +389,6 @@ The server MAY agree to using different major versions of the same module on dif
 When a `want` message concerns the same module as an earlier `want` message, the server MUST reply consistently.
 If it agreed to using a particular major version of a module in an earlier `have` message, and that major version is offered again in the current `have` message, it MUST agree to this major version and offer the same full version as in the earlier `have` message.
 If it did not agree to using a particular major version of a module in an earlier `have` message, and that major version is offered again in the current `have` message, it MUST NOT agree to this major version.
-
-#### 4.2.2. Answering requests for capabilities
-
-If the `want` message requests usage of a capability and the server agrees to using that capability, it MUST reply with a `have` message with a single argument: the capability name as accepted by `<scoped-name>`.
-Receipt of this `have` message entitles the client to use all message types, properties and behavior defined in a specification of that module with the same major version number and the same, or a smaller, minor version number, where such functionality depends on the negotiated capability.
-
-A server SHALL NOT agree to using a capability if it did not agree to using a module that defines this capability in any prior `have` message on the same server connection.
-
-When a `want` message concerns the same capability as an earlier `want` message, the server MUST reply consistently.
-If it agreed to using the capability in an earlier `have` message, it MUST agree to it again, and vice versa.
-
-#### 4.2.3. Examples
 
 The following snippet shows examples of valid and invalid streams of `want` messages and `have` replies.
 Each set of messages, as separated by an empty line, is to be considered as occurring on separate server connections.
@@ -436,45 +406,20 @@ Each set of messages, as separated by an empty line, is to be considered as occu
 
 (want core 1)
 (have core 1.0)
-(want foo.cap)
-(have)
---> cannot negotiate capability from foo before usage of foo module has been agreed upon
-
-(want core 1)
-(have core 1.0)
 (want foo 1 2)
 (have)
-(want foo.cap)
-(have)
---> server did not agree to using foo module and thus cannot agree to using a capability from that module
-
-(want core 1)
-(have core 1.0)
-(want foo 1 2)
-(have foo 1.1)
-(want foo.cap)
-(have)
---> server has not agreed to capability
-
-(want core 1)
-(have core 1.0)
-(want foo 1 2)
-(have foo 1.1)
-(want foo.cap)
-(have foo.cap)
---> server has agreed to capability
+--> server did not agree to using foo module
 ```
 
-The server is under no obligation of agreeing to any module or capability.
-Clients should be prepared to gracefully handle unavailable modules or capabilities.
-If the client finds that the server has not agreed to a module or capability that the client needs, it must exit.
+The server is under no obligation of agreeing to any module.
+Clients should be prepared to gracefully handle unavailable modules.
+If the client finds that the server has not agreed to a module that the client needs, it must exit.
 
 ## 5. Other eternal message types
 
 ### 5.1. The `nope` message
 
 - Directionality: any
-- Required capabilities: none
 - Number of arguments: none
 
 Upon receiving an invalid message, a server or client MAY reply by sending a `nope` message with no arguments.
@@ -483,7 +428,7 @@ It MUST do so if:
 1. it cannot determine the message type of the invalid message, or
 2. it can determine, based on the message type of the invalid message, that the sender is waiting for a reply.
 
-As an exception, the recipient SHALL NOT send a `nope` message when a module or capability that the server has agreed to mandates a different behavior for the invalid message in question.
+As an exception, the recipient SHALL NOT send a `nope` message when a module that the server has agreed to mandates a different behavior for the invalid message in question.
 
 *Rationale:* The purpose of the `nope` message is solely to unblock any processes which are waiting for a reply to their previous message.
 This module does not define any generic error reporting mechanisms beyond this message type.
@@ -494,7 +439,6 @@ We consider it pointless to try to get any misbehaving process to start behaving
 ### 6.1. The `core.sub` message
 
 - Directionality: client to server
-- Required capabilities: none
 - Number of arguments: one or more
 
 A client can send a `core.sub` message to establish a **subscription** to a nonzero number of properties.
@@ -506,16 +450,14 @@ Clients which only want to get the value of a property once are free to ignore a
 
 A `core.sub` message is invalid (within the meaning of section 2.4) if any of its arguments is:
 
-- not the name of a property,
-- the name of a property in a module to whose usage the server has not agreed, or
-- the name of a property which is restricted to a capability to which the server has not agreed.
+- not the name of a property, or
+- the name of a property in a module to whose usage the server has not agreed.
 
 When a server receives a valid `core.sub` message, it MUST subscribe the sending client to all properties in the message's argument list, and immediately notify the client with a corresponding `core.pub` message (see below).
 
 ### 6.2. The `core.pub` message
 
 - Directionality: server to client
-- Required capabilities: none
 - Number of arguments: two or more (must be even)
 
 A server can send a `core.pub` message to inform a client of the values of certain properties.
@@ -526,8 +468,7 @@ That is, the second argument is the value of the property whose name is the firs
 A `core.pub` message is invalid (within the meaning of section 2.4) if any of its odd-numbered arguments is:
 
 - not the name of a property,
-- the name of a property in a module to whose usage the server has not agreed,
-- the name of a property which is restricted to a capability to which the server has not agreed, or
+- the name of a property in a module to whose usage the server has not agreed, or
 - the name of a property to which the recipient of the `core.pub` message has not subscribed.
 
 Moreover, a `core.pub` message is invalid if any of its even-numbered arguments is a property value which is not valid for the property in question according to the specification defining the property.
@@ -540,7 +481,7 @@ For `core.sub` messages, this applies regardless of whether the client sending t
 The following snippet shows examples of valid and invalid pairs of `core.sub` messages and `core.pub` replies.
 The snippet is not a single message stream.
 Each pair of messages is to be considered individually.
-The snippet assumes that `foo.bar` and `foo.baz` are properties which are defined by the module `foo1` and which can assume arbitrary values, and that the server has agreed to using `foo1` and to all capabilities required by these properties.
+The snippet assumes that `foo.bar` and `foo.baz` are properties which are defined by the module `foo1` and which can assume arbitrary values, and that the server has agreed to using `foo1`.
 
 ```vt6
 (core.sub foo.bar foo.baz)
@@ -575,7 +516,6 @@ The snippet assumes that `foo.bar` and `foo.baz` are properties which are define
 ### 6.3. The `core.set` message
 
 - Directionality: client to server
-- Required capabilities: none
 - Number of arguments: two or more (must be even)
 
 A client can send a `core.set` message to change the value of one or more properties.
@@ -583,9 +523,8 @@ The argument list of a `core.set` message has the same form as that of a `core.p
 
 A `core.set` message is invalid (within the meaning of section 2.4) if any of its odd-numbered arguments is:
 
-- not the name of a property,
-- the name of a property in a module to whose usage the server has not agreed, or
-- the name of a property which is restricted to a capability to which the server has not agreed.
+- not the name of a property, or
+- the name of a property in a module to whose usage the server has not agreed.
 
 Notably, the message is not invalid if any of its even-numbered arguments is a value that is not permissible for the property in question.
 
@@ -620,7 +559,6 @@ The server might reject this, and report the previous value in the `core.pub` re
 ### 7.1. The `core.server-msg-bytes-max` property
 
 - Acceptable values: unsigned integers
-- Required capabilities: none
 - Can be set by client: yes
 
 The value of this property is the maximum length of a message sent from the server to the client in bytes.
@@ -632,7 +570,6 @@ We choose this standard buffer size of 1 KiB such that most, if not all, message
 ### 7.2. The `core.client-msg-bytes-max` property
 
 - Acceptable values: unsigned integers
-- Required capabilities: none
 - Can be set by client: yes
 
 The value of this property is the maximum length of a message sent from the client to the server in bytes.
