make core.sub/pub/set atomic

--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -439,109 +439,65 @@ We consider it pointless to try to get any misbehaving process to start behaving
 ### 6.1. The `core.sub` message
 
 - Directionality: client to server
-- Number of arguments: one or more
+- Number of arguments: one
 
-A client can send a `core.sub` message to establish a **subscription** to a nonzero number of properties.
-The arguments of the `core.sub` message are the names of the properties which the client wishes to subscribe to.
+A client can send a `core.sub` message to establish a **subscription** to a property.
+The argument is the name of that property.
 
 *Rationale:* It is intentional that subscribing to a property is the only way for a client to retrieve a property's value.
 This design nudges implementors towards handling server-initiated changes to properties properly.
-Clients which only want to get the value of a property once are free to ignore any subsequent `core.pub` messages.
+Clients which only want to get the value of a property once are free to ignore subsequent `core.pub` messages.
 
-A `core.sub` message is invalid (within the meaning of section 2.4) if any of its arguments is:
-
-- not the name of a property, or
-- the name of a property in a module to whose usage the server has not agreed.
+A `core.sub` message is invalid (within the meaning of section 2.4) if its argument is not the name of a property, or if it is defined by a module to whose usage the server has not agreed.
 
 When a server receives a valid `core.sub` message, it MUST subscribe the sending client to all properties in the message's argument list, and immediately notify the client with a corresponding `core.pub` message (see below).
 
 ### 6.2. The `core.pub` message
 
 - Directionality: server to client
-- Number of arguments: two or more (must be even)
+- Number of arguments: two
 
-A server can send a `core.pub` message to inform a client of the values of certain properties.
-It MUST have an even number of arguments.
-The argument list consists of pairs of property names and property values.
-That is, the second argument is the value of the property whose name is the first argument; the fourth argument (if present) is the value of the property whose name is the third argument; and so on.
+A server can send a `core.pub` message to inform a client of the value of a property.
+The first argument SHALL be the name of a property.
+The second argument SHALL be the value of that property.
 
-A `core.pub` message is invalid (within the meaning of section 2.4) if any of its odd-numbered arguments is:
+A `core.pub` message is invalid (within the meaning of section 2.4) if its first argument is:
 
 - not the name of a property,
 - the name of a property in a module to whose usage the server has not agreed, or
 - the name of a property to which the recipient of the `core.pub` message has not subscribed.
 
-Moreover, a `core.pub` message is invalid if any of its even-numbered arguments is a property value which is not valid for the property in question according to the specification defining the property.
+Moreover, a `core.pub` message is invalid if its second argument is not a valid value for the property in question according to the specification defining the property.
 
 A `core.pub` message can be sent by the server at any time to notify the client of changes to the values of properties that the client has subscribed to.
-Moreover, a `core.pub` message MUST be sent by the server immediately upon receiving a valid `core.sub` or `core.set` message.
-This message MUST contain the values of all properties named in the `core.sub` or `core.set` message, in the same order.
-For `core.sub` messages, this applies regardless of whether the client sending the message subscribes to properties for the first time, or whether subscriptions to these properties already existed for this client.
-
-The following snippet shows examples of valid and invalid pairs of `core.sub` messages and `core.pub` replies.
-The snippet is not a single message stream.
-Each pair of messages is to be considered individually.
-The snippet assumes that `foo.bar` and `foo.baz` are properties which are defined by the module `foo1` and which can assume arbitrary values, and that the server has agreed to using `foo1`.
-
-```vt6
-(core.sub foo.bar foo.baz)
-(core.pub foo.bar hello-world foo.baz 20)
---> valid; property "foo.bar" has the value "hello-world" and "foo.baz" has the value "20"
-
-(core.sub foo.bar foo.baz)
-(core.pub foo.bar "hello-world" foo.baz "20")
---> valid, and semantically identical to the previous example since the bareword hello-world represents the same string as the quoted string "hello-world"
-
-(core.sub foo.bar foo.baz)
-(core.pub foo.bar (hello (world)) foo.baz 20)
---> valid; property values may be arbitrarily complex s-expressions if the spec defining the property allows it
-
-(core.sub foo.bar foo.baz)
-(core.pub foo.bar hello-world foo.baz)
---> invalid; odd number of arguments
-
-(core.sub foo.bar foo.baz)
-(core.pub foo.bar hello-world)
---> invalid; missing a property mentioned in the `core.sub` message
-
-(core.sub foo.bar foo.baz)
-(core.pub foo.bar hello-world foo.baz 20 foo.extra 10)
---> invalid; references a property not mentioned in the `core.sub` message
-
-(core.sub foo.bar foo.baz)
-(core.pub foo.baz 20 foo.bar hello-world)
---> invalid; properties not listed in correct order
-```
+Upon receiving a valid `core.sub` or `core.set` message, the server MUST reply immediately with a `core.pub` message for the same property^.
 
 ### 6.3. The `core.set` message
 
 - Directionality: client to server
-- Number of arguments: two or more (must be even)
+- Number of arguments: two
 
 A client can send a `core.set` message to change the value of one or more properties.
-The argument list of a `core.set` message has the same form as that of a `core.pub` message (pairs of property names and values).
+The argument list of a `core.set` message has the same form as that of a `core.pub` message (a pair of property name and value).
 
-A `core.set` message is invalid (within the meaning of section 2.4) if any of its odd-numbered arguments is:
+A `core.set` message is invalid (within the meaning of section 2.4) if its argument is not the name of a property, or if it is defined by a module to whose usage the server has not agreed.
 
-- not the name of a property, or
-- the name of a property in a module to whose usage the server has not agreed.
-
-Notably, the message is not invalid if any of its even-numbered arguments is a value that is not permissible for the property in question.
+The message is _not_ invalid if any of its even-numbered arguments is a value that is not permissible for the property in question.
 
 *Rationale:* For non-trivial properties, the client might not have enough information to decide whether a given value is valid.
 
 Setting a property implies subscribing to the property.
-That is, a `core.set` message sent from a client to a server implies a `core.sub` message from the same client to the same server that mentions the same properties that are mentioned in the `core.set` message.
+That is, a `core.set` message sent from a client to a server implies a `core.sub` message from the same client to the same server for the same property.
 This does not mean, however, that a separate `core.pub` message must be sent to answer the implied `core.sub` message.
 For example:
 
 ```vt6
 # this message...
-(core.set foo.bar value1 foo.baz value2)
+(core.set foo.bar desired-value)
 # ...implies this message...
-(core.sub foo.bar foo.baz)
+(core.sub foo.bar)
 # ...and may result in a reply like this
-(core.pub foo.bar value1 foo.baz value3)
+(core.pub foo.bar actual-value)
 ```
 
 *Rationale:* For properties that only need to be set once, this reduces the number of messages required from four (sub-pub-set-pub) to two (set-pub).
