--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -62,95 +62,101 @@ The following platform integration modules are available at the time of publicat
 
 This section uses augmented Backus-Naur form (ABNF) as defined in [RFC5234](https://tools.ietf.org/html/rfc5234).
 
-### 2.1. S-expression format
+### 2.1. Building blocks
+
+#### 2.1.1. Strings
 
 ```abnf
-s-expression    = "(" *space *( ( s-expression / atom ) *space ) ")"
+bytestring = length ":" *byte ","
 
-atom            = bareword / quoted-string
+length = "0" / nzdigit *digit
 
-bareword        = 1*( letter / digit / "." / "-" / "_" )
-
-quoted-string   = quote *( quoted-char / bslash ( bslash / quote ) ) quote
-
-quote   = %x22              ; " (double quote)
-bslash  = %x5C              ; \ (backslash)
-digit   = %x30-39           ; decimal digits 0-9
-nzdigit = %x31-39           ; non-zero decimal digits 1-9
-letter  = %x41-5A / %x61-7A ; letters A-Z and a-z
-space   = %x20 / %x09-0D    ; ASCII characters which are accepted by isspace() under the C locale
+digit   = %x30-39 ; decimal digits 0-9
+nzdigit = %x31-39 ; non-zero decimal digits 1-9
+byte    = %x00-FF ; any single byte
 ```
 
-Furthermore, the `<quoted-char>` element accepts all byte strings which encode exactly one Unicode character using the UTF-8 encoding, except for the ASCII backslash or the ASCII double quote.
+In the context of VT6 messages, a **bytestring** is a sequence of bytes which is:
 
-*Rationale:* [utf8everywhere.org](http://utf8everywhere.org) nicely sums up the arguments for not bothering with other text encodings.
+- it is accepted by `<bytestring>`, and
+- the number of bytes between the first colon and the trailing comma is equal to the decimal value of the sequence of ASCII digits before the first colon.
 
-An **s-expression** is a parenthesis-delimited sequence of atoms or other s-expressions, which are referred to as the s-expression's **elements**.
-Whitespace (sequences of `<space>`) between the parentheses and atoms is ignored.
-For example, the following three s-expressions are equivalent.
+The sequence of bytes between the first colon and the trailing comma is called the **value** of the bytestring.
 
-```vt6
-(foo bar)
+*Rationale:* This is the [netstring encoding](https://cr.yp.to/proto/netstrings.txt) first described by Daniel J. Bernstein.
 
-(           foo bar)
+#### 2.1.2. Lists
 
-(foo   bar   )
+```abnf
+list = length "|" *( list / bytestring )
 ```
 
-The **length** of an s-expression is the number of elements that it contains.
-Any element that is an s-expression itself counts as one element regardless of how many elements it contains.
-For example, the length of the s-expression `(a (b c) d)` is 3.
-The shortest s-expression is the empty s-expression, `()`, with length 0.
+A **list** is a sequence of elements which are either bytestrings or other lists, such that:
 
-An **atom** is either a bareword or a quoted string.
-Each atom **represents** a string of Unicode characters.
-
-A **bareword** is a sequence of ASCII letters, digits, dots, dashes or underscores, such that the first character is a letter.
-A bareword **represents** itself.
-
-```
-bareword             valid
-example-bareword     valid
-example3.0           valid
-example bareword     invalid (contains whitespace)
-5example             invalid (does not start with letter)
-"bareword"           invalid (contains forbidden ASCII character)
-¯\_(ツ)_/¯           invalid (contains character not in ASCII)
-```
-
-A **quoted string** is a string of printable Unicode characters in the UTF-8 encoding, except for the double quote or backslash, enclosed by double quotes.
-The quoted string **represents** the string of characters between its enclosing quotes, except for escaping rules as noted below.
-For example, the quoted string `"abc"` represents the same 3-letter string as the bareword `abc`.
-
-A quoted string may represent a string containing double quotes or backslashes, if these characters are escaped by inserting a backslash before them.
-For example, the quoted string `"ab\\\"cd\""` represents the string `ab\"cd"`.
-For each string of Unicode characters, there exists exactly one quoted string that represents it.
+- it is accepted by `<list>`, and
+- the number of elements are the first pipe symbol is equal to the decimal value of the sequence of ASCII digits before the first pipe symbol.
 
 *Rationale:* We avoid compactly-coded escape sequences like those specified by [ECMA-48](https://www.ecma-international.org/publications/files/ECMA-ST/ECMA-48,%202nd%20Edition,%20August%201979.pdf) aka ANSI&nbsp;X3.64 aka ISO/IEC&nbsp;6429 because of the risk that escape sequences specified by different modules collide with each other.
-We choose s-expressions because they can be implemented very easily, both on the generating and on the parsing side.
-They are as flexible and human-readable as JSON, TOML or YAML, but at the same time more compact than either of those.
-We do not include support for additional escape sequences in quoted strings because there is no apparent need for them.
-Users generating s-expressions will be using a programming or scripting language, and can take advantage of the escape sequences provided by these languages' string literals.
-Each s-expression adhering to this specification is also a valid UTF-8-encoded string, so implementations can reuse existing Unicode support libraries.
+We choose netstring-derived lists because they can be implemented very easily, both on the generating and on the parsing side.
+They are as flexible and human-readable as s-expressions, JSON, TOML or YAML, but at the same time more compact than either of those.
+
+### 2.1.3. Human-readable representation
+
+Within specifications, the following alternative representation for bytestrings and lists can be used:
+
+- Bytestrings whose value matches the regular expression `^[A-Za-z0-9._-]*$` are represented directly by their value.
+- Other bytestrings are represented as C string literals with the same value.
+- Lists are represented by a whitespace-separated concatenation of the representations of their elements, enclosed in parentheses.
+
+*Rationale:* This format is much more human-readable and thus better suited for examples within specifications, or for diagnostic output of programs that process VT6 messages.
+
+The following snippet shows alternative representations of several example bytestrings and lists.
+
+```
+example:      11:hello world,
+alternative:  "hello world"
+
+example:      5:hello,
+alternative:  hello
+
+example:      2|5:hello,5:world,
+alternative:  (hello world)
+
+example:      3|2|3:foo,3:bar,3:abc,3:def,
+alternative:  ((foo bar) abc def)
+
+example:      2|2|3:foo,3:bar,2|3:abc,3:def,
+alternative:  ((foo bar) (abc def))
+
+example:      0|
+alternative:  ()
+
+example:      1|0:,
+alternative:  ("")
+```
 
 ### 2.2. Message format
 
 ```abnf
-strict-bareword = ( letter / "_" ) *( letter / "-" / "_" )
+letter = %x41-5A / %x61-7A ; letters A-Z and a-z
 
-module-name  = strict-bareword
-scoped-name  = module-name "." strict-bareword
-message-type = "want" / "have" / "nope" / scoped-name
+identifier        = ( letter / "_" ) *( letter / "-" / "_" )
+scoped-identifier = identifier "." identifier
+message-type      = "want" / "have" / "nope" / scoped-identifier
 
-message        = "(" *space message-type *space *( ( s-expression / atom ) *space ) ")"
+message = "{" list "}"
 ```
 
-A **VT6 message** (or just **message**, if the term is not ambiguous) is a nonempty s-expression whose first element is an atom that is accepted by `<message-type>`.
+A **VT6 message** (or just **message**, if the term is not ambiguous) is a nonempty list enclosed in curly brackets whose first element is a bytestring whose value is accepted by `<message-type>`.
 The first element of a message is therefore called the message's **type**.
 Any following elements of a message are called the message's **arguments**.
 A message may have arbitrarily many arguments, including zero arguments.
-As can be seen in the grammar definition above, a message type name consists of a module name (see section 3.1) and a strict bareword, separated by a dot (see section 3.3).
+
+The message type consists of two **identifiers**, separated by a dot.
+The identifier before the dot is the name of the module (see section 3.1) defining that message type.
 As an exception, the message types "want", "have" and "nope" do not contain a module name (see sections 4 and 5).
+
+*Rationale:* The curly brackets that enclose messages serve as a sequence point where parsing can be resumed after a parsing error (see section 2.4).
 
 ```abnf
 message-stream = *( *space message ) *space
@@ -159,7 +165,6 @@ message-stream = *( *space message ) *space
 A **VT6 message stream** (or just **message stream**, if the term is not ambiguous) is a sequence of VT6 messages which are optionally preceded, succeeded and/or separated by whitespace.
 
 *Rationale:* Allowing for whitespace between messages is especially useful when messages are emitted by a script in a language where a `print` operation appends a line separator by default.
-As with s-expressions above, a message stream is also a valid UTF-8-encoded string, so implementations can reuse existing Unicode support libraries.
 
 ```abnf
 fenced-message-stream = escape-char message-stream escape-char
@@ -191,29 +196,21 @@ Furthermore, fenced message streams MUST NOT be written into the client's standa
 
 A message is **invalid** if...
 
-- the message is not accepted by `<s-expression>`,
-
-- the message's first element is not an atom accepted by `<message-type>`,
+- it does not conform to the definitions above,
 
 - the message's arguments do not conform to the requirements for the message's type, as stated in the specification defining the message type in question,
 
-- the size of the bytestring encoding the message exceeds the recipient's maximum message size (see sections 6.1 and 6.2), usually 1024 bytes, or
+- the length of the message exceeds the recipient's maximum message size (see sections 6.1 and 6.2), usually 1024 bytes, or
 
 - the message type is unknown or its use has not been agreed to by the server (see section 4).
 
-A VT6 server receiving an invalid message from a VT6 client MUST act towards the client as if the message had never been received at all, and vice versa for messages from the server to the client.
+Receipt of an invalid message MUST NOT cause any effect that can be observed by the sender, except for error responses that only occur for invalid messages (see section 5.1).
 
-A VT6 client or server MAY continue parsing and acting on a partially received message only if it is able to rollback all actions performed because of this message if the message turns out to be invalid once fully received, or if the connection is lost before the message is fully received.
-This only concerns actions that are performed towards the sender of the message.
-For example, the action of a server reporting a malformed client message to the user is not restricted by this rule, since the action is towards the user rather than the VT6 client.
+If, while parsing a message stream, a recipient finds a message that cannot be parsed (either because of syntax errors or because the message exceeds the recipient's maximum message size), the recipient SHOULD employ the following algorithm to reset the stream parser and find the next well-formed message.
 
-If, while parsing a message stream, a message in the stream exceeds the recipient's maximum message size, the recipient SHOULD employ the following algorithm to reset the stream parser and find the next well-formed message.
-
-1. Discard all input characters until a `(` character is found, without keeping track of whether the `(` is inside a quoted string or not.
+1. Discard all input characters until a `{` character is found.
 2. Try to parse a message starting from this character.
 3. If no valid message could be read, go back to step 1.
-
-*Rationale:* In step 1, we explicitly recommend to ignore quotes because, given the simple syntax of s-expressions, the most likely syntax error (other than unbalanced parentheses) is malformed quoted strings because of unescaped quotes or backslashes.
 
 ## 3. Modules
 
@@ -236,7 +233,7 @@ These criteria include at least:
 - the behavior that is expected of the recipient party upon having received the message.
 
 A **property** is a quantifiable aspect which describes the server or the server connection over which messages concerning this property are exchanged.
-Each concrete value of a property is represented as either an `<atom>` or an `<s-expression>`.
+Each concrete value of a property is represented as either a `<bytestring>` or a `<list>`.
 The value of a property may influence how the server reacts to a message from the client.
 It may also influence how the client reacts to a message from the server if (and only if) the client has subscribed to this property (see section 6.1).
 
@@ -304,7 +301,7 @@ This includes, specifically:
 - the syntax of `want`, `have` and `nope` messages as described in sections 2.1 and 4.
   Those message types are therefore called **eternal**.
 
-The backwards-compatibility requirement across major versions of `core` does not apply to those parts of the message syntax that can only be used after the initial `want` and `have` messages (namely, quoted strings and nested s-expressions).
+The backwards-compatibility requirement across major versions of `core` does not apply to those parts of the message syntax that can only be used after the initial `want` and `have` messages (namely, nested lists).
 
 ### 3.3. Module naming conventions
 
@@ -318,6 +315,10 @@ The name of any private module SHOULD start with two leading underscores.
 
 ### 3.4. Predefined property types
 
+When a property is said to **accept string values**, this means that the set of acceptable values for this property is the set of all bytestrings whose value is a properly UTF-8-encoded string.
+
+*Rationale:* [utf8everywhere.org](http://utf8everywhere.org) nicely sums up the arguments for not bothering with other text encodings.
+
 ```abnf
 integer          = "0" / ( [sign] nzdigit *digit )
 unsigned-integer = "0" / ( nzdigit *digit )
@@ -325,10 +326,10 @@ unsigned-integer = "0" / ( nzdigit *digit )
 sign = "+" / "-"
 ```
 
-When a property is said to **accept integer values**, this means that the set of acceptable values for this property is the set of all atoms whose string value matches the `<integer>` grammar element defined above.
-Analogously, when a property is said to **accept unsigned integer values**, this means that the set of acceptable values for this property is the set of all atoms whose string value matches the `<unsigned-integer>` grammar element defined above.
+When a property is said to **accept integer values**, this means that the set of acceptable values for this property is the set of all bytestrings whose value matches the `<integer>` grammar element defined above.
+Analogously, when a property is said to **accept unsigned integer values**, this means that the set of acceptable values for this property is the set of all bytestrings whose value matches the `<unsigned-integer>` grammar element defined above.
 
-In both these cases, the numerical value of each such atom is that value which is returned when the `atoll()` function as defined in [the POSIX.1 specification](http://pubs.opengroup.org/onlinepubs/9699919799/functions/atoll.html) is applied to the string value of the atom.
+In both these cases, the numerical value of each such bytestring is that value which is returned when the `atoll()` function as defined in [the POSIX.1 specification](http://pubs.opengroup.org/onlinepubs/9699919799/functions/atoll.html) is applied to the value of the bytestring.
 The module specification defining the property may impose additional restrictions on the numerical value of the property.
 
 Section 7 of this specification uses the property types defined in this section.
